Made changes to and uploaded txt file

--- a/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/02-Homework_04-Pandas_Instructions_HeroesOfPymoli_HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,6 +130,7 @@
     "# Read Purchasing File and store into Pandas data frame\n",
     "HeroesOfPymoli = pd.read_csv(file_to_load)\n",
     "\n",
+    "#Convert file to data frame\n",
     "HeroesOfPymoli_data = pd.DataFrame(HeroesOfPymoli)\n",
     "HeroesOfPymoli_data.head()"
    ]
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -193,13 +194,16 @@
        "0                      576"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Count number of unique values \n",
     "unique_players = HeroesOfPymoli_data[\"SN\"].nunique()\n",
+    "\n",
+    "#Display result in data frame\n",
     "unique_players_df = pd.DataFrame({\"Total Number of Players\": unique_players}, index=[0])\n",
     "unique_players_df"
    ]
@@ -229,11 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Count number of unique values \n",
     "unique_items = HeroesOfPymoli_data[\"Item ID\"].nunique()\n",
+    "\n",
+    "#Use mean() count() and sum() functions to calculate avereage price, number of purchases and total revenue\n",
     "average_price = round(HeroesOfPymoli_data[\"Price\"].mean(), 2)\n",
     "number_purchase = HeroesOfPymoli_data[\"Purchase ID\"].count()\n",
     "total_revenue = HeroesOfPymoli_data[\"Price\"].sum()"
@@ -241,35 +248,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_130c5708_f18a_11ea_bd39_c4544422a049\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_e6c7b0b4_f197_11ea_affc_c4544422a049\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_130c5708_f18a_11ea_bd39_c4544422a049level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_130c5708_f18a_11ea_bd39_c4544422a049row0_col0\" class=\"data row0 col0\" >179</td>\n",
-       "                        <td id=\"T_130c5708_f18a_11ea_bd39_c4544422a049row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_130c5708_f18a_11ea_bd39_c4544422a049row0_col2\" class=\"data row0 col2\" >780</td>\n",
-       "                        <td id=\"T_130c5708_f18a_11ea_bd39_c4544422a049row0_col3\" class=\"data row0 col3\" >$2379.77</td>\n",
+       "                        <th id=\"T_e6c7b0b4_f197_11ea_affc_c4544422a049level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_e6c7b0b4_f197_11ea_affc_c4544422a049row0_col0\" class=\"data row0 col0\" >179</td>\n",
+       "                        <td id=\"T_e6c7b0b4_f197_11ea_affc_c4544422a049row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_e6c7b0b4_f197_11ea_affc_c4544422a049row0_col2\" class=\"data row0 col2\" >780</td>\n",
+       "                        <td id=\"T_e6c7b0b4_f197_11ea_affc_c4544422a049row0_col3\" class=\"data row0 col3\" >$2379.77</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x26695bc4160>"
+       "<pandas.io.formats.style.Styler at 0x26695c4c3c8>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Display results in data frame\n",
     "purchasing_analysis = pd.DataFrame({\"Number of Unique Items\": unique_items, \"Average Price\": average_price, \n",
     "                                    \"Number of Purchases\": number_purchase, \"Total Revenue\": total_revenue}, index=[0])\n",
+    "\n",
+    "#Use style.format() funciton to display currency and number of decimals \n",
     "format_df = {\"Average Price\": '${:}', \"Total Revenue\":'${:}'}\n",
     "purchasing_analysis.style.format(format_df)"
    ]
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -353,17 +363,25 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Select columns \n",
     "players_gender = HeroesOfPymoli_data.loc[:,[\"SN\", \"Gender\"]]\n",
+    "\n",
+    "#Drop recurring usernames to get correct number unique players\n",
     "unique_values = players_gender.drop_duplicates()\n",
+    "\n",
+    "#Use value_counts() function to calculate number of players per gender\n",
     "gender = unique_values[\"Gender\"].value_counts()\n",
-    "total_players = unique_values[\"Gender\"].count()\n",
-    "player_percentage = round((gender / total_players *100), 2).astype(str) + '%'\n",
+    "\n",
+    "#Calculate player percentage\n",
+    "player_percentage = round((gender / unique_players *100), 2).astype(str) + '%'\n",
+    "\n",
+    "#Display results in data frame\n",
     "gender_demographics = pd.DataFrame({\"Total Count\": gender, \"Percentage of Players\": player_percentage})\n",
     "gender_demographics"
    ]
@@ -396,56 +414,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg. Purchase total per person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_228ce87a_f198_11ea_bb78_c4544422a049\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg. Purchase total per person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row0_col0\" class=\"data row0 col0\" >113</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
+       "                        <th id=\"T_228ce87a_f198_11ea_bb78_c4544422a049level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row0_col0\" class=\"data row0 col0\" >113</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row1_col0\" class=\"data row1 col0\" >652</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row1_col2\" class=\"data row1 col2\" >$1967.64</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
+       "                        <th id=\"T_228ce87a_f198_11ea_bb78_c4544422a049level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row1_col0\" class=\"data row1 col0\" >652</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row1_col2\" class=\"data row1 col2\" >$1967.64</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row2_col0\" class=\"data row2 col0\" >15</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
-       "                        <td id=\"T_d7bfdc40_f186_11ea_bc96_c4544422a049row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
+       "                        <th id=\"T_228ce87a_f198_11ea_bb78_c4544422a049level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row2_col0\" class=\"data row2 col0\" >15</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
+       "                        <td id=\"T_228ce87a_f198_11ea_bb78_c4544422a049row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x26695b45400>"
+       "<pandas.io.formats.style.Styler at 0x26695b715f8>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Select columns\n",
     "gender_purchase = HeroesOfPymoli_data.loc[:, [\"SN\", \"Gender\", \"Price\"]]\n",
+    "\n",
+    "#Group data by gender\n",
     "grouped_gender = gender_purchase.groupby([\"Gender\"])\n",
+    "\n",
+    "#Use mean() count() and sum() functions and basic division to calculate purchase count, avg. purchase price, avg. purchase total\n",
     "purchase_count = grouped_gender.count()[\"Price\"]\n",
     "average_price = grouped_gender.mean()[\"Price\"]\n",
     "total_purchase = round(grouped_gender.sum()[\"Price\"], 2)\n",
     "total_person = round((total_purchase / gender), 2)\n",
+    "\n",
+    "#Display results in data frame and use style.format() function to style\n",
     "purchasing_data = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": average_price, \n",
-    "                                   \"Total Purchase Value\": total_purchase, \"Avg. Purchase total per person\": total_person})\n",
-    "format_df = {\"Average Purchase Price\":'${:,.2f}', \"Total Purchase Value\": '${:}', \"Avg. Purchase total per person\": '${:}'}\n",
+    "                                   \"Total Purchase Value\": total_purchase, \n",
+    "                                \"Avg. Purchase total per person\": total_person})\n",
+    "format_df = {\"Average Purchase Price\":'${:,.2f}', \n",
+    "             \"Total Purchase Value\": '${:}', \"Avg. Purchase total per person\": '${:}'}\n",
     "purchasing_data.style.format(format_df)"
    ]
   },
@@ -573,15 +600,24 @@
    "source": [
     "#Create the bins\n",
     "bins = [0, 9, 14, 19, 24, 29, 34, 39, 45]\n",
+    "\n",
     "#Create the names for the bins\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "\n",
     "#Categorize players through age bins \n",
     "HeroesOfPymoli_data[\"Age Groups\"] = pd.cut(HeroesOfPymoli_data[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
+    "\n",
     "#remove duplicate usenames to get accurate count of users\n",
     "drop_reccuring = HeroesOfPymoli_data.drop_duplicates(\"SN\")\n",
+    "\n",
+    "#Group data by age group\n",
     "age_groups = drop_reccuring.groupby(\"Age Groups\")\n",
+    "\n",
+    "#Use count() function and basic division to calculate the numbers and percentages by age group\n",
     "group_total = age_groups.count()[\"Age\"]\n",
     "group_percentage = round((group_total / unique_players *100), 2).astype(str) + '%'\n",
+    "\n",
+    "# Display results in data frame\n",
     "age_demographics = pd.DataFrame({\"Total Count\": group_total, \"Percentage of Players\": group_percentage}, index=group_names)\n",
     "age_demographics"
    ]
@@ -690,12 +726,20 @@
     }
    ],
    "source": [
+    "#Select columns\n",
     "age_purchase = HeroesOfPymoli_data.loc[:, [\"SN\", \"Age\", \"Age Groups\", \"Price\"]]\n",
+    "\n",
+    "#Group data by age group\n",
     "grouped_age = age_purchase.groupby(\"Age Groups\")\n",
+    "\n",
+    "#Use count(), mean() and sum() functions and basic division to calculate purchase count, \n",
+    "# avg. purchase price, avg. purchase total\n",
     "purchase = grouped_age.count()[\"Price\"]\n",
     "average_purchase = grouped_age.mean()[\"Price\"]\n",
     "total_value = grouped_age.sum()[\"Price\"]\n",
     "average_total = round((total_value / group_total), 2)\n",
+    "\n",
+    "# Display results in data frame and use style.format() function to style\n",
     "age_data = pd.DataFrame({\"Purchase Count\": purchase, \"Average Purchase Price\": average_purchase, \n",
     "                                   \"Total Purchase Value\": total_value, \"Avg. Purchase total per person\": average_total})\n",
     "format_df = {\"Average Purchase Price\": '${:,.2f}', \"Total Purchase Value\": '${:,.2f}', \n",
@@ -782,10 +826,15 @@
     }
    ],
    "source": [
+    "#Group data by sn (username)\n",
     "grouped_sn = age_purchase.groupby(\"SN\")\n",
+    "\n",
+    "#Use count(), mean() and sum() functions to obtain results  \n",
     "sn_purchase = grouped_sn.count()[\"Price\"]\n",
     "sn_average = grouped_sn.mean()[\"Price\"]\n",
     "sn_total = grouped_sn.sum()[\"Price\"]\n",
+    "\n",
+    "# Display results in data frame and use style.format() function to style\n",
     "top_spenders = pd.DataFrame({\"Purchase Count\": sn_purchase, \"Average Purchase Price\": sn_average, \n",
     "                             \"Total Purchase Value\": sn_total}).sort_values(by=\"Total Purchase Value\", ascending=False)\n",
     "format_df = {\"Average Purchase Price\": '${:,.2f}', \"Total Purchase Value\": '${:,.2f}'}\n",
@@ -879,11 +928,18 @@
     }
    ],
    "source": [
+    "#Select columns\n",
     "items = HeroesOfPymoli_data.loc[:, [\"Item ID\", \"Item Name\", \"Price\"]]\n",
+    "\n",
+    "#Group data by item ID then item name\n",
     "grouped_items = items.groupby([\"Item ID\", \"Item Name\"])\n",
+    "\n",
+    "##Use count() and sum() functions and basic division to calculate purchase count, item price, and total purchase value\n",
     "item_purchase = grouped_items.count()[\"Price\"]\n",
     "purchase_total = grouped_items.sum()[\"Price\"]\n",
     "each_price = purchase_total / item_purchase\n",
+    "\n",
+    "# Display results in data frame and use style.format() function to style\n",
     "popular_items = pd.DataFrame({\"Purchase Count\": item_purchase, \"Item Price\": each_price, \n",
     "                              \"Total Purchase Value\": purchase_total}).sort_values(by=\"Purchase Count\", ascending=False)\n",
     "format_df = {\"Item Price\": '${:,.2f}', \"Total Purchase Value\": '${:,.2f}'}\n",
@@ -968,6 +1024,7 @@
     }
    ],
    "source": [
+    "#Sort data by total purchase value using sort_values() function\n",
     "popular_items.sort_values(by=\"Total Purchase Value\", ascending=False).head(5).style.format(format_df)"
    ]
   }
